@@ -25,11 +25,15 @@
     
   <build>
     <plugins>
-     <plugin>
+      <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-source-plugin</artifactId>
       </plugin>
-  	<plugin>
+  	  <plugin>
+		<groupId>org.jacoco</groupId>
+		<artifactId>jacoco-maven-plugin</artifactId>
+	  </plugin>
+  	  <plugin>
 		<groupId>org.eclipse.tycho</groupId>
 		<artifactId>tycho-surefire-plugin</artifactId>
 		<version>${tycho-version}</version>
@@ -45,9 +49,10 @@
 			<useUIHarness>false</useUIHarness>
 			<useUIThread>false</useUIThread>
 			<argLine>-Xmx1024m</argLine>
-			<argLine>-XX:MaxPermSize=256m</argLine>			
+			<argLine>-ea</argLine>
+			<argLine>${tycho.testArgLine}</argLine>
 		</configuration>
-	</plugin>
+	  </plugin>
     </plugins>
   </build>
 </project>
